--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Javascript Async/Await easy and step by step tutorial with lots of examples
+title: Mastering Javascript Asynchronous Programming: from Callbacks to Async/Await - A Comprehensive Guide with Examples
 
